src/objects/RoomProp__c.object
<CustomObject>
    <fields>
        <fullName>EnName__c</fullName>
        <label>部屋属性名（英）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnPropValue__c</fullName>
        <inlineHelpText>該当項目は属性値として優先利用する、該当項目は未入力の場合、部屋属性名は属性値として利用する</inlineHelpText>
        <label>属性値（英）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PropValue__c</fullName>
        <inlineHelpText>該当項目は属性値として優先利用する、該当項目は未入力の場合、部屋属性名は属性値として利用する</inlineHelpText>
        <label>属性値</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RoomRef__c</fullName>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>部屋属性</relationshipLabel>
        <relationshipName>RoomPropRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>部屋属性</label>
    <nameField>
        <label>部屋属性名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>